# ForgeAI

./: .env.example  .gitignore  README.md  SAD.md  SETUP.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_project_status_default_draft.py  0003_idx_agent_runs_created_at.py
backend/app/: main.py
backend/app/api/: dependencies.py  middleware.py
backend/app/application/interfaces/: analytics_repository.py  artifact_repository.py  llm_provider.py  project_repository.py  run_repository.py  user_repository.py
backend/app/application/prompts/: __init__.py  backend_generator.py  database_designer.py  frontend_generator.py  refiner.py  requirements_analyst.py  reviewer.py  software_architect.py  task_planner.py
backend/app/application/services/: analytics_service.py  auth_service.py  (+2 more)
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/schemas/: analytics.py  artifact.py  auth.py  common.py  project.py  run.py  user.py
backend/tests/: conftest.py  test_analytics.py  test_artifact_downloads.py  test_artifact_packager.py  test_auth.py  test_backend_generator.py  test_database_designer.py  test_forge_state.py  test_frontend_generator.py  test_health.py  test_llm_service.py  test_projects.py  test_refiner.py  test_requirements_analyst.py  test_reviewer.py  test_software_architect.py  test_task_planner.py  test_workflow_api.py  test_workflow_cancellation.py  test_workflow_graph.py  test_workflow_stream.py
(+95 files in other folders)
